We'll get there eventually